--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "httpx>=0.28.1",
     "msgspec>=0.19.0",
     "pillow>=12.0.0",
+    "psycopg[binary]>=3.1",
     "pydantic-settings>=2.11.0",
     "pypugjs>=6.0.1",
     "python-socketio>=5.14.3",
