--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aiohttp>=3.13.2",
     "apscheduler>=3.11.1",
     "av>=16.0.1",
+    "cachetools>=6.2.2",
     "fastapi>=0.121.0",
     "fasteners>=0.20",
     "httpx>=0.28.1",
